--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Cyrus_Zei",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.12",
-    "node-restful": "^0.2.5"
+    "node-restful": "^0.2.5",
+    "path": "^0.12.7"
   }
 }
