--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "loopback": "^2.28.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.12",
     "node-restful": "^0.2.5",
